# SFML_Template

./: CMakeLists.txt  main.cpp
